--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>моя любимая игра </title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <a id="start"></a>
    <h1>моя любимая игра Бравл Старс
    </h1>
     <p>в Бравл Старсе много интересных бравлеров сегодня мы поговорим о них!</p>
@@ -42,14 +44,23 @@ height="182" title="это Лили" loading="lazy">
           width="560"
           height="315"
           frameborder="0"
-          allowfullscreen
+          allowfullscreen 
           title="Встраивоемое видео">
           </iframe>
     </li>
+    <h1>мои топ 5 любимых блогеров по брал старс</h1>
+    <li>5 место: Умнышка1976</li>
+    <li>4 место: YMNUK</li>
+    <li>3 место: ElISE</li>
+    <li>2 место: HOLDIK</li>
+    <li>1 место: BUBS</li>
     <li>
         <audio  controls  loop>
             <source src="audio/holdik-lyubit-sunduki-mp3.mp3">
         </audio>
     </li>
+    <a href="test.html">Внутреняя ссылка</a>
+    <br>
+    <a href="#start">Вернутся в начало</a>
 </body>
 </html>
